feat: add JSpecify nullness annotations (#390)